--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,56 +1,51 @@
-# This is a basic workflow to help you get started with Actions
+# This workflow will install a prebuilt Ruby version, install dependencies, and
+# run tests and linters. Then it pulls new features from my repo and
+# rebuild containers on remote server through ssh.
 
 name: "Ruby on Rails CI"
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   lint:
-     runs-on: ubuntu-latest
-     steps:
-        -name: Checkout code
-         uses: actions/checkout@v3
-        -name: Install Ruby and gems
-         uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127
-         with:
-            bundler-cache: true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
+        with:
+          bundler-cache: true
       - name: Lint Ruby files
         run: bundle exec rubocop
 
   test:
-     needs: lint 
+    needs: lint
     runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres:14
         ports:
           - "5432:5432"
-          env:
-            POSTGRES_DB : rails_test
-            POSTGRES_USER: rails
-            POSTGRES_PASSWORD: password
-          env:
-            POSTGRES_DB: rails_test
-            POSTGRES_USER: rails
-            POSTGRES_PASSWORD: password
-            RAILS_ENV: test
-            DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
-          steps: 
-            -name: Checkout code
-             uses: actions/checkout@v3
-            -name: Install Ruby and gems
-             uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127
-             with:
+        env:
+          POSTGRES_DB: rails_test
+          POSTGRES_USER: rails
+          POSTGRES_PASSWORD: password
+    env:
+      POSTGRES_DB: rails_test
+      POSTGRES_USER: rails
+      POSTGRES_PASSWORD: password
+      RAILS_ENV: test
+      DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@ee2113536afb7f793eed4ce60e8d3b26db912da4 # v1.127.0
+        with:
           bundler-cache: true
       - name: Set up database schema
         run: bin/rails db:schema:load
@@ -83,4 +78,3 @@ jobs:
             docker-compose --file docker-compose.prod.yml down;
             docker-compose --file docker-compose.prod.yml up -d;
             docker system prune --all --force;
-             
